--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       content="Web site created using create-tsrouter-app"
     />
     <link rel="manifest" href="/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <title>Clarke Engineering</title>
   </head>
   <body>
